<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">源科安全控制</string>
	<string name="login_name">源科加密固态硬盘安全控制</string>    
    <string name="runcore_name">湖南源科高新技术有限公司</string>
    <string name="runcore_website">www.runcore.com</string>
    <string name="login_pwd">安全控制软件登录密码</string>
    <string name="button_login">安全密码登录</string>
    <string name="button_bind">绑定确认</string>
	<string name="button_run">启用确认</string>    
    <string name="title_activity_device">源科安全设备面板</string>
    <string name="title_sectionBindList">源科设备列表</string>
    <string name="title_sectionScanList">蓝牙设备列表</string>
    <string name="title_scanned_devices">蓝牙扫描列表</string>
    <string name="title_other_devices">未配对设备</string>
    <string name="title_runcore_devices">源科磁盘列表</string>
    <string name="title_unbinded_devices">未绑定加密盘</string>
	<string name="title_settings_pwd">安全密码</string>    
	<string name="title_settings_sw">智能防御</string> 
	<string name="title_settings_kill">远程销毁</string>
	<string name="title_df_sw">被动防御</string>    
	<string name="title_sf_sw">智能销毁</string>    
	<string name="title_bt_sw">双盘功能</string>    
	<string name="title_df_sw_break">防拆卸功能开关</string>    
	<string name="title_df_sw_eject">防插拔功能开关</string>
	<string name="info_df_sw_break">硬盘被物理拆卸时，自动销毁数据</string>    
	<string name="info_df_sw_eject">硬盘被物理拔出时，自动销毁数据</string>
	<string name="title_df_sw_bt">默认启动盘</string>    
	<string name="info_df_sw_bt">内置双盘型号，可以设置默认启动盘</string>  
	<string name="info_df_sw_bt_a">A盘</string>    
	<string name="info_df_sw_bt_b">B盘</string>    
	<string name="button_scan">扫描蓝牙设备</string>
    <string name="button_bind_action">绑定设备</string>
    <string name="button_del_action">删除设备</string>
    <string name="none_paired">当前没有已识别配对的设备</string>
    <string name="none_found">没有找到任何蓝牙设备</string>
    <string name="select_device">请点击选择设备进行配对</string>
    <string name="scanning">正在蓝牙搜索设备中</string>
    <string name="scan_diag_title">蓝牙扫描</string>
    <string name="conn_diag_title">连接蓝牙设备</string>
    <string name="scan_diag_msg">正在搜索附近的蓝牙设备</string>
    <string name="conn_diag_msg">正在连接选中的蓝牙设备</string>
    <string name="getinfo_diag_msg">蓝牙连接成功，正在识别设备信息</string>
    <string name="bind_ssd_title">绑定磁盘</string>
	<string name="unbind_ssd_title">绑定磁盘</string>	
	<string name="bind_ssd_msg">正在绑定认证加密磁盘</string>
	<string name="unbind_ssd_msg">正在解除加密磁盘的绑定认证</string>
	<string name="run_ssd_title">开启磁盘</string>
	<string name="run_ssd_msg">正在启用认证加密磁盘</string>	
	<string name="title_activity_dashboard">源科安全控制中心</string>
    <string name="loginuser_hint">登录账户</string>
    <string name="loginpwd_hint">登录密码</string>
    <string name="disk_a_hint">硬盘A密码</string>
    <string name="disk_b_hint">硬盘B密码</string>
	<string name="disk_pwd_hint">硬盘密码</string>    
    <string name="title_bind_diag_title">绑定加密盘</string>
	<string name="title_unbind_diag_title">解绑加密盘</string>    
	<string name="title_run_diag_title">启用加密盘</string>    
    <string name="title_bind_diag_info">请输入加密盘密码</string>
    <string name="scanned_tips_init">请点击蓝牙搜索刷新附近的新设备</string>
    <string name="scanned_tips_conn">蓝牙搜索完毕，请点击设备发起连接</string>
    <string name="binded_tips_init">目前无源科磁盘，请切换到蓝牙面板搜索</string>
    <string name="binded_tips_bind">点击列表中磁盘进行连接、绑定、开启等操作，拖拽到垃圾箱可以解除绑定和删除设备</string>
    <string name="settings_run_pwd">修改硬盘运行密码</string>
    <string name="settings_kill_pwd">修改硬盘销毁密码</string>
    <string name="settings_old_run_pwd">老运行密码</string>
    <string name="settings_new_run_pwd">新运行密码</string>
    <string name="settings_old_kill_pwd">老销毁密码</string>
    <string name="settings_new_kill_pwd">新销毁密码</string>
    <string name="settings_pwd_of_kill">销毁密码</string>
    <string name="settings_mod_cfm">修改确认</string>
    <string name="settings_kill_cfm">销毁确认</string>
    <string name="settings_kill">蓝牙销毁硬盘数据</string>
    <string name="title_settings_max_retries">智能销毁参数</string>
    <string name="settings_max_retries">密码重试最大次数(1-9)</string>
    <string name="cfg_ssd_title">配置磁盘</string>
    <string name="cfg_ssd_msg">正在将配置下发到加密盘生效</string>
</resources>
